# xml-rpc-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  RELEASE_PROCESS.md  index.html
.github/workflows/: ci.yml
examples/: client.rs  custom-header.rs  libcurl.rs
src/: de.rs  error.rs  fault.rs  lib.rs  parser.rs  request.rs  ser.rs  transport.rs  utils.rs  value.rs
tests/: python.rs
xmlrpc/: index.html
