[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "An XML-RPC implementation for Rust"
documentation = "https://docs.rs/xmlrpc/"
repository = "https://github.com/jonas-schievink/xml-rpc-rs.git"
keywords = ["xml", "rpc", "remote", "ipc"]
categories = ["network-programming", "encoding"]
readme = "README.md"
license = "CC0-1.0"
name = "xmlrpc"
version = "0.14.0"

# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'xmlrpc = "[a-z0-9\\.-]+"'
replace = 'xmlrpc = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/xmlrpc/[a-z0-9\\.-]+"
replace = "https://docs.rs/xmlrpc/{{version}}"

[badges]
travis-ci = { repository = "jonas-schievink/xml-rpc-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
# public
iso8601 = "0.3.0"
reqwest = { version = "0.10.1", features = [ "blocking" ], default-features = false, optional = true }
# private
mime = { version = "0.3", optional = true }
base64 = "0.12.0"
xml-rs = "0.8.0"

[dev-dependencies]
version-sync = "0.9"

[features]
http = ["reqwest", "mime"]
tls = ["reqwest/default-tls"]
default = ["http", "tls"]

[[example]]
name = "client"
required-features = ["http"]

[[example]]
name = "custom-header"
required-features = ["http"]

[[test]]
name = "python"
harness = false
required-features = ["http"]

[[test]]
name = "version-numbers"
